--- a/LightGame/Config/DefaultEngine.ini
+++ b/LightGame/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=LightGame
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/LightGame/PlayLevel.PlayLevel
+GameDefaultMap=/Game/LightGame/PlayLevel.PlayLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
